  - Implemented nodecay flag for regions.
  - Fixed kills (it was not possible to become a murderer).
  - Implemented a method to send a client an url to open in a webbrowser.
  - Fixed monsters starting to attack players even if there was no line of sight.
  - Activated new pathfinding algorithm.
  - Cleaned up npc movement speed. ( For fast npcs lower your 'NPCs Check Time' in wolfpack.xml )
 * Definition Changes:
  - Tinker buy some items now
  - Bench (0x1049) which was crafted was "unusable"
  - fixed bug #0000381 ("potion_keg" and "potionkeg")
  - Set the minimum restock amount of reagents, arrows and bolts to 50.
  - Fixed the name of sheep.
  - Fixed bug #0000386 (missing tongs sellprice tag)
  - Fixed light radius for certain lightsources.
  - Removed carve tags (and related files) which are no longer used.
  - Added Samurai Empire craftables to the tailoring menu.
  - Added watersource tags (bug #0000399)
  - Converted NPC skill tags to <skill id="skillname">value</skill>
  - Fix for skills.xml and NPCs: magicresist is now magicresistance.
  - Fixed weaponsmith not buying weapons.
  - Adjusted light radius of some items.
  - Added books to learn special abilities (mining sand/stone; glassblowing; masonry)
  - Added granite and sand definitions
  - Added craftmenu for glassblowing
  - Support up to client 4.0.11.
  - Added Multis and Multi deeds.
  - Implemented some new npcs (thx to idget).
 * Python Script Changes:
  - Improved/fixed goitem and gouid command in relation to containers (sending content).
  - Added an follow button to who menu.
  - Added a follow command.
  - Tinkers can now choose a second material.
  - Swingspeed is now limited to 1 swing per second.
  - Implemented several item property caps.
  - Archers now only need to stand still for 500 ms before they can fire.
  - Parried special abilities don't consume mana anymore.
  - Using a special ability 3 seconds after the last special ability consumes twice
    the mana.